--- a/app/src/main/res/layout/activity_mis_servicios_empleado.xml
+++ b/app/src/main/res/layout/activity_mis_servicios_empleado.xml
@@ -10,35 +10,39 @@
 
     <!-- Header -->
 
-    <!-- Subtitle -->
-
-    <TextView
-        android:id="@+id/header_title"
-        android:layout_width="0dp"
-        android:layout_height="134dp"
-        android:background="@drawable/header_blue"
-        android:padding="24dp"
-        android:text="Mis Servicios"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+    <LinearLayout
+        android:id="@+id/layoutHeader"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/bg_container_blue"
+        android:elevation="0dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="En este módulo encontrarás diferentes categorías, donde podrás visualizar tus horarios asignados"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_title" />
+        <TextView
+            android:id="@+id/misServicios"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mis Servicios"
+            android:layout_marginBottom="4dp"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/detalleServicios"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text="En este módulo encontrarás diferentes categorías, donde podrás visualizar tus horarios asignados"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <!-- Cards -->
     <androidx.cardview.widget.CardView
@@ -56,7 +60,7 @@
         app:cardBackgroundColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_title">
+        app:layout_constraintTop_toBottomOf="@id/layoutHeader">
 
         <LinearLayout
             android:layout_width="match_parent"
