--- a/app/src/main/res/layout/activity_pantalla_empleado_mis_servicios.xml
+++ b/app/src/main/res/layout/activity_pantalla_empleado_mis_servicios.xml
@@ -236,7 +236,7 @@
 
     <include
         android:id="@+id/footer"
-        layout="@layout/layout_footer"
+        layout="@layout/layout_footer_empleado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
